# optdiff

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  before.txt  deny.toml  dump.txt  flake.nix  hello.c  package.nix  pipeline.ts
.github/workflows/: release.yml
src/: cli_write.rs  demangle.rs  main.rs  optpipeline.rs
