[package]
name = "optdiff"
version = "0.3.1"
edition = "2021"
license = "BSD-2-Clause"
description = "A CLI tool that displays diffs of LLVM IR changes between optimization passes"
repository = "https://github.com/abrasumente233/optdiff"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
is-terminal = "0.4.13"
itertools = "0.12.1"
regex = "1.10.4"
similar = "2.6.0"

[target.'cfg(unix)'.dependencies]
pager = "0.16.1"

[package.metadata.release]
publish = false
