[package]
name = "optdiff"
version = "0.5.1"
edition = "2021"
license = "BSD-2-Clause"
description = "A CLI tool that displays diffs of LLVM IR changes between optimization passes"
repository = "https://github.com/abrasumente233/optdiff"

[dependencies]
clap = { version = "4.5.21", features = ["derive", "env"] }
color-eyre = "0.6.3"
color-print = "0.3.7"
is-terminal = "0.4.13"
itertools = "0.12.1"
regex = "1.10.4"
similar = "2.6.0"
which = "7.0.0"

[target.'cfg(unix)'.dependencies]
pager = "0.16.1"

[profile.release-with-debug]
inherits = "release"
debug = true

[package.metadata.release]
publish = false
